--- a/home.html
+++ b/home.html
@@ -1,10 +1,18 @@
-<html ng-app="spaApp" ng-controller="SpaCtrl">
+<html ng-app="spaApp" ng-controller="mainController">
   <head>
     <title ng-bind="title">{{Page.title}}</title>
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-local-storage.js"></script>
     <script src="js/lib/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/services/pageService.js"></script>
+    <script src="js/services/storageService.js"></script>
+    <script src="js/services/userService.js"></script>
+    <script src="js/controllers/mainController.js"></script>
+    <script src="js/controllers/signinController.js"></script>
+    <script src="js/controllers/welcomeController.js"></script>
+    <script src="js/controllers/SignoutController.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   </head>
   <body>
