--- a/home.html
+++ b/home.html
@@ -4,15 +4,15 @@
     <script src="js/lib/angular.min.js"></script>
     <script src="js/lib/angular-local-storage.js"></script>
     <script src="js/lib/angular-ui-router.js"></script>
-    <script src="js/app.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/services/pageService.js"></script>
-    <script src="js/services/storageService.js"></script>
-    <script src="js/services/userService.js"></script>
-    <script src="js/controllers/mainController.js"></script>
-    <script src="js/controllers/signinController.js"></script>
-    <script src="js/controllers/welcomeController.js"></script>
-    <script src="js/controllers/SignoutController.js"></script>
+    <script src="js/app/app.js"></script>
+    <script src="js/app/config.js"></script>
+    <script src="js/app/services/pageService.js"></script>
+    <script src="js/app/services/storageService.js"></script>
+    <script src="js/app/services/userService.js"></script>
+    <script src="js/app/controllers/mainController.js"></script>
+    <script src="js/app/controllers/signinController.js"></script>
+    <script src="js/app/controllers/welcomeController.js"></script>
+    <script src="js/app/controllers/SignoutController.js"></script>
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   </head>
   <body>
